--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,1 +1,14 @@
-
+<table>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Wins</th>
+            <th>Losses</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
