--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <h2> War Leaderboard</h2>
 <table class = table table-hover>
     <thead>
@@ -15,3 +16,4 @@
         </tr>
     </tbody>
 </table>
+
