--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -4,3 +4,7 @@
         of all your wins and loses. Navigate to the player tab to see all the players and play the game.
     </h3>
 </div>
+<p>
+    <button type = "button" class = "btn btn-primary" routerLink="/play">PLAY</button>
+</p>
+
