--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -1,1 +1,11 @@
-<p>play works!</p>
+<button type = button class = "btn btn-primary" routerLink="/welcome">QUIT</button>
+<p class = "space">OTHER PLAYER CARD</p>
+<p class = "space">
+    <span>Wins:</span>
+    <span class = "space" class = "left">FACED DOWN CARD</span>
+    <span class = "left">Losses:</span>
+</p>
+<p>YOUR CARD</p>
+<p>
+    <button type = "button" class = "btn btn-secondary">Play</button>
+</p>
