--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div>
     <h3>
         Welcome to War, the objective is to draw a higher card value compared to your opponent. The game will keep track
