card service gets user cards

--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -1,11 +1,11 @@
 <button type = button class = "btn btn-primary" routerLink="/welcome">QUIT</button>
-<p class = "space">OTHER PLAYER CARD</p>
+<p class = "space">{{AIcard.face}}</p>
 <p class = "space">
     <span>Wins:</span>
     <span class = "space" class = "left">FACED DOWN CARD</span>
     <span class = "left">Losses:</span>
 </p>
-<p>YOUR CARD</p>
+<p>{{playercard.face}}</p>
 <p>
     <button type = "button" class = "btn btn-secondary">Play</button>
 </p>
