Made a screen where you can select your player

--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -6,6 +6,7 @@
             <th>Name</th>
             <th>Wins</th>
             <th>Losses</th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
@@ -13,6 +14,9 @@
             <td>{{p.name}}</td>
             <td>{{p.wins}}</td>
             <td>{{p.losses}}</td>
+            <td>
+                <a>Play</a>
+            </td>
         </tr>
     </tbody>
 </table>
