made a screen where you can select your player

--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -1,14 +1,16 @@
 <button type = button class = "btn btn-primary" routerLink="/welcome">QUIT</button>
 <p class = "space">
-    <img src ={{AIcard.photo}}>
+    <img src ="assets/images/back_of_playing_card.png">
 </p>
 <p class = "space">
     <span>Wins:</span>
-    <span class = "space" class = "left">FACED DOWN CARD</span>
+    <span class = "space" class = "left"><img src ="assets/images/back_of_playing_card.png"></span>
+    <span>{{player.outcome}}</span>
+    <span class = "space" class = "left"><img src ="assets/images/back_of_playing_card.png"></span>
     <span class = "left">Losses:</span>
 </p>
 <p>
-    <img src ={{playercard.photo}}></p>
+    <img src ="assets/images/back_of_playing_card.png"></p>
 <p>
     <button type = "button" class = "btn btn-secondary">Play</button>
 </p>
