player select page assigns player to game.

--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -15,7 +15,7 @@
             <td>{{p.wins}}</td>
             <td>{{p.losses}}</td>
             <td>
-                <a>Play</a>
+                <a routerLink = "/selectplayer/{{p.id}}">Play</a>
             </td>
         </tr>
     </tbody>
