--- a/src/app/selectplayer/selectplayer.component.html
+++ b/src/app/selectplayer/selectplayer.component.html
@@ -1,1 +1,18 @@
-<p>selectplayer works!</p>
+<app-menu></app-menu>
+<table>
+    <tr>
+        <td><h2>Name:</h2></td>
+        <td><h2> {{player.name}}</h2></td>
+    </tr>
+    <tr>
+        <td><h2>Wins:</h2></td>
+        <td><h2>{{player.wins}}</h2></td>
+    </tr>
+    <tr>
+        <td><h2>Losses:</h2></td>
+        <td><h2>{{player.losses}}</h2></td>
+    </tr>
+    <tr>
+        <button type = "button" class = "btn btn-primary" (click)="play()">Play</button>
+    </tr>
+</table>
