--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -12,5 +12,5 @@
 <p>
     <img src ="assets/images/back_of_playing_card.png"></p>
 <p>
-    <button type = "button" class = "btn btn-secondary">Play</button>
+    <button type = "button" class = "btn btn-secondary">Draw</button>
 </p>
