--- a/src/app/selectplayer/selectplayer.component.html
+++ b/src/app/selectplayer/selectplayer.component.html
@@ -1,4 +1,7 @@
 <app-menu></app-menu>
+<h2>
+    <buton type = "button" class = "btn btn-primary" routerLink = "/player">Back</buton>
+</h2>
 <table>
     <tr>
         <td><h2>Name:</h2></td>
