The cards appear when you press draw.

--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -3,9 +3,9 @@
     <img src ="assets/images/back_of_playing_card.png">
 </p>
 <p class = "space">
-    <span class = "space"><img src ={{player.photo}}></span>
+    <span class = "space"><img src ={{playercard.photo}}></span>
     <span>{{player.outcome}}</span>
-    <span class = "space" class = "left"><img src = {{player.photo}}></span>
+    <span class = "space" class = "left"><img src = {{AIcard.photo}}></span>
 </p>
 <p>
     <img src ="assets/images/back_of_playing_card.png"></p>
