--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,7 +2,7 @@
 <div>
     <h3>
         Welcome to War, the objective is to draw a higher card value compared to your opponent. The game will keep track
-        of all your wins and loses. Navigate to the player tab to see all the players and play the game.
+        of all your wins and loses. Navigate to the leaderboard tab to see all the players and play the game.
     </h3>
 </div>
 
