Got rid of wins and losses

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,8 +1,7 @@
 <app-menu></app-menu>
 <div>
     <h3>
-        Welcome to War, the objective is to draw a higher card value compared to your opponent. The game will keep track
-        of all your wins and loses. Navigate to the leaderboard tab to see all the players and play the game.
+        Welcome to War, the objective is to draw a higher card value compared to your opponent. Navigate to the leaderboard tab to see all the players and play the game.
     </h3>
 </div>
 
