--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -2,6 +2,10 @@
 <p class = "space">
     <img src ="assets/images/back_of_playing_card.png">
 </p>
+<div>
+    <span class = "spread">Your Card</span>
+    <span class = "secondspread">Opponent Card</span>
+</div>
 <p class = "space">
     <span class = "space"><img src ={{playercard.photo}}></span>
     <span>{{player.outcome}}</span>
@@ -10,7 +14,5 @@
 <p>
     <img src ="assets/images/back_of_playing_card.png"></p>
 <p>
-    Wins: <span>{{player.wins}}</span>
     <button type = "button" class = "btn btn-secondary" (click)="draw()">Draw</button>
-    Losses: <span>{{player.losses}}</span>
 </p>
