--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -8,3 +8,9 @@ p {
     padding-left: auto;
     padding-right: auto;
 }
+.bg-image{
+    background-image: url('../../assets/Images/poker_table.jpg'); 
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
