--- a/src/app/player/player.component.css
+++ b/src/app/player/player.component.css
@@ -4,7 +4,14 @@ table {
     margin-right: auto;
     text-align: center;
     margin-top: 35px;
+    border-color: black;
 }
 h2 {
     text-align: center;
+}
+.bg-image{
+    background-image: url('../../assets/Images/poker_table.jpg'); 
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
