--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,19 +1,21 @@
-<app-menu></app-menu>
-<h2> War Leaderboard</h2>
-<table class = table table-hover>
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let p of players">
-            <td>{{p.name}}</td>
-            <td>
-                <a routerLink = "/selectplayer/{{p.id}}">Play</a>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<body class = bg-image>
+    <app-menu></app-menu>
+    <h2> War Leaderboard</h2>
+    <table class = table table-hover>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let p of players">
+                <td>{{p.name}}</td>
+                <td>
+                    <a routerLink = "/selectplayer/{{p.id}}">Play</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</body>
 
