got rid of leaderboard

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,7 +1,9 @@
 <div class = bg-image>
-    <app-menu></app-menu>
     <h3>
         Welcome to War, the objective is to draw a higher card value compared to your opponent. Navigate to the leaderboard tab to see all the players and play the game.
     </h3>
+    <p>
+        <button type = "button" class = "btn btn-primary" routerLink = "/play">Play</button>
+    </p>
 </div>
 
